--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "dependencies": {
-    "prompt-sync": "^4.2.0"
-  }
+  "name": "ifpi-ads-algoritmos",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "type": "module"
 }
